web/app/assets/stylesheets/welcome/application.scss
@import "normalize";
@import "media-queries";
@import "variables";
@import "smile";



.demo {
  position: relative;

  // @include mobile-only {
  //   display: none;
  // }
}

.macbook {
  width: 720px;
  height: 464px;
  background-image: asset_url("welcome/mockup-macbook.png");
  background-position: center top;
  margin: 95px 0 0 0;
  z-index: 1;
  @include mobile-only {
    display: none;
  }

  &__screen {
    width: 593px;
    height: 313px;
    background: #ffffff;
    position: relative;
    top: 105px;
    left: 23px;

    & img {
      width: inherit;
    }
  }

  &__beta-explanation {
    text-align: center;
    margin: 15px 0 0 0;
    font-weight: normal;
    color: #7D7D7D;
    font-size: 12px;
  }
}

.android {
  width: 176px;
  height: 324px;
  background-image: asset_url("welcome/mockup-android.png");
  background-position: center top;
  background-size: 100%;
  margin: 95px 0 0 0;
  z-index: 2;
  position: absolute;
  top: 180px;
  right: 10px;
  @include mobile-only {
    position: relative;
    top: 0;
    right: 10px;
    transform: scale(1.7);
    margin: 200px 0 110px 0;
  }

  &__screen {
    width: 124px;
    height: 248px;
    background: #ffffff;
    position: relative;
    top: 35px;
    left: 27px;
    border-radius: 5px;

    & img, picture, video {
      width: inherit;
    }
  }
}

.invite {
  margin: 250px auto 0 auto;
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-bottom: 220px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  @include mobile-only {
    margin: 100px auto 0 auto;
    padding-bottom: 60px;
  }

  &__status {
    transition: transform 0.8s ease;
  }

  &.is-invited {
    .invite__cta {
      opacity: 0;
    }

    .invite__google-details {
      opacity: 0;
    }

    .invite__share {
      opacity: 1 !important;
    }
  }

  &__counter {
    font-style: normal;
    font-weight: 500;
    font-size: 23px;
    line-height: 27px;
    margin: 20px 0 0 0;
    text-align: center;
    @include mobile-only {
      font-size: 18px;
      line-height: 21px;
      padding: 0 45px;
    }
  }

  &__details {
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 21px;
    color: rgba(12, 15, 9, 0.7);
    margin: 12px 0 0 0;
    text-align: center;
    transition: opacity 0.4s ease;
    @include mobile-only {
      display: none;
      font-size: 14px;
      line-height: 16px;
      margin: 6px 0 0 0;
      padding: 0 50px;
    }
  }

  &__cta {
    width: 366px;
    height: 87px;
    font-family: $font-primary-family;
    font-style: normal;
    font-weight: 900;
    font-size: 28px;
    line-height: 34px;
    display: flex;
    align-items: center;
    text-align: center;
    text-transform: uppercase;
    color: $brand-color;
    justify-content: center;
    box-shadow: 0 0 45px rgba(0, 0, 0, 0.25);
    border-radius: 60px;
    margin: 85px auto 0 auto;
    cursor: pointer;
    transition: box-shadow 0.4s ease, transform 0.4s ease, opacity 0.4s ease;
    -webkit-tap-highlight-color: transparent;
    -webkit-touch-callout: none;
    @include mobile-only {
      width: 245px;
      height: 65px;
      font-size: 18px;
      margin: 35px auto 0 auto;
    }

    &:hover {
      box-shadow: 0 0 45px rgba(0, 0, 0, 0.35);
      transform: scale(1.05);

      &.invite__cta span {
        transform: translateX(6px);
      }
    }

    & span {
      position: relative;
      top: 0px;
      right: -20px;
      transition: transform 0.4s ease;
      @include mobile-only {
        display: none;
      }
    }
  }

  &__google-details {
    text-align: center;
    margin: 20px auto 0 auto;
    // width: 406px;
    // height: 35px;
    // background-image: asset_url("welcome/google-details.png");
    // background-repeat: no-repeat;
    // background-position: center;
    transition: opacity 0.4s ease;
    @include mobile-only {
      // width: 220px;
      // height: 51px;
      // background-image: asset_url("welcome/google-details-mobile.png");
      // background-repeat: no-repeat;
      // background-position: center;
    }
  }

  &__share {
    opacity: 0 !important;
    width: 100%;
    margin: 25px 0 0 0;
    text-align: center;
    transition: opacity 0.4s ease;
  }

  & .people {
    margin: auto;
    position: relative;
    width: 328px;
    height: 55px;
    z-index: 2;
    @include mobile-only {
      width: 220px;
      height: 40px;
    }

    &__person-face {
      width: 50px;
      height: 50px;
      border: 3px solid #FFFFFF;
      border-radius: 100%;
      position: absolute;
      left: 0;
      background-color: #c6e5ff;
      background-size: 106% 106%;
      background-position: center;
      //transition: transform 2s ease;
      @include mobile-only {
        width: 35px;
        height: 35px;
        border: 2px solid #FFFFFF;
      }
    }
  }
}

.questions {
  width: 100%;
  height: 920px;
  background-image: asset_url('welcome/bg-footer.jpg');
  background-repeat: no-repeat;
  background-position: top center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

  @include mobile-only {
    background-image: asset_url('welcome/bg-footer-mobile.jpg');
    background-repeat: no-repeat;
    background-position: bottom center;
    height: auto;
  }

  & h2 {
    font-family: $font-primary-family;
    font-weight: bold;
    font-size: 48px;
    line-height: 58px;
    margin: 140px auto 0 auto;
    padding: 0;
    text-align: center;
    @include mobile-only {
      font-size: 31px;
      line-height: 0;
      margin: 65px auto 0 auto;
    }
  }

  & h3 {
    @include mobile-only {
      font-size: 15px;
    }
  }

  &__grid {
    display: grid;
    width: 1000px;
    height: 275px;
    top: 0;
    margin: 95px auto 0 auto;
    grid-row-gap: 25px;
    grid-column-gap: 20px;
    grid-template-columns: 20% 20% 20% 20% 20%;
    grid-template-areas: "q1 q1 q2 q2 q2" "q3 q3 q3 q3 q3" "q4 q4 q4 q5 q5";
    position: relative;
    left: -50px;
    @include mobile-only {
      left: auto;
      width: 90%;
      grid-row-gap: 10px;
      grid-column-gap: 10px;
      grid-template-columns: 100%;
      grid-template-areas: "q1" "q2" "q3" "q4" "q5";
      margin: 55px auto 0 auto;
    }
  }

  &__grid-item {
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: bold;
    font-size: 18px;
    line-height: 22px;
    color: $brand-color;
    cursor: pointer;
    width: 100%;
    height: 100%;
    transition: transform 0.4s ease;

    h3 {
      font-family: $font-secondary-family;
    }

    &:hover {
      //transform: scale(0.9);
      background: $brand-color;
      & h3 {
        color: #ffffff;
      }
    }

    &.is-open {

    }

    &--q1 {
      grid-area: q1;
      background: #F2F2F2;
    }

    &--q2 {
      grid-area: q2;
      background: #F2F2F2;
    }

    &--q3 {
      grid-area: q3;
      background: #F2F2F2;
    }

    &--q4 {
      grid-area: q4;
      background: #F2F2F2;
    }

    &--q5 {
      grid-area: q5;
      background: #F2F2F2;
    }
  }
}

.answer {
  background: white;
  width: 100%;
  height: 100vh;
  position: fixed;
  z-index: 3;
  top: 0;
  left: 0;
  display: none;
  text-align: center;
  /* padding: 15% 0; */
  cursor: zoom-out;
  overflow: auto;
  will-change: opacity, transform;

  &__content {
    max-width: 480px;
    margin: auto;
    display: none;
    text-align: left;
    @include mobile-only {
      max-width: 90%;
      margin: 0px 20px;
    }

    & h3 {
      font-size: 26px;
      margin-bottom: 35px;
      border-bottom: 1px solid;
      padding-bottom: 15px;
    }

    & p {
      text-align: left;
      font-size: 18px;
      line-height: 1.6em;
      margin: 0 0px 30px 0;
      @include mobile-only {
        font-size: 16px;
      }
    }

    & li {
      list-style: none;
      padding: 0 0 20px 0;
    }
  }

  &.is-showin {
    animation-name: show-in;
    animation-duration: 600ms;
    animation-timing-function: ease;
  }

  &.is-showout {
    animation-name: show-in;
    animation-duration: 600ms;
    animation-timing-function: ease;
    animation-direction: reverse;
  }

  @keyframes show-in {
    from {
      opacity: 0;
      transform: scale(0.8);
    }
    to {
      opacity: 1;
      transform: scale(1);
    }
  }
}

.footer {
  margin-top: 185px;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;

  &__logo-icon {
    position: relative;
  }

  &__links {
    margin: 60px 0 12px 0;
    font-size: 12px;
    font-family: $font-secondary-family;
    & a {
      color: $font-tertiary-color;
    }
  }
}

.skatista {
  width: 98px;
  height: 152px;
  background-image: asset_url('welcome/skatista.png');
  position: absolute;
  bottom: 35px;
  right: -100px;
  transition: transform 9s ease-out;
  will-change: transform;
  //animation-name: skate;
  //animation-duration: 10s;
  //animation-timing-function: ease-out;
  //will-change: transform;

  //@keyframes skate {
  //  from {
  //    transform: translate(0, 0);
  //  }
  //  to {
  //    transform: translate(1900px, 50px);
  //  }
  //}
}

.has-helper i {
  border-bottom: 2px dotted #59616e;
  cursor: help;
  font-style: normal;
}

